Line up new oregen options with legacy